package biblioteca;

import java.io.Serializable;

public class Administrador extends Usuario implements Serializable{
    
    public Administrador (String nombre, String password){
        super(nombre, password);
    }
        
    @Override
    public void verCatalogo(){
        
    }
    
    public void darAltaUsuario(){
        
    }
    
    public void darBajaUsuario(){
        
    }
    
    public void modificarDatosUsuario(){
        
    }
    
    public void reparaLibro(){
        
    }
    
    public void agregarLibro(){
        
    }
    
    public void eliminarLibro(){
        
    }
    
    public void modificarLibro(){
        
    }
    
}
