package biblioteca;

public class Biblioteca {
    
    public static void main(String[] args) {
        Sistema sistemaPrestamos = new Sistema();
        sistemaPrestamos.iniciar();

    }
    
}
