package biblioteca;

import java.io.Serializable;
import java.util.ArrayList;

public class Catalogo implements Serializable{
    private ArrayList<Libro> libros = new ArrayList<>();
}
