@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Biblioteca {
    -sistema: Sistema
}

class Catalogo {
    -ArrayList: libros[] Libro
    +verCatalogoLibros()
}

class Libro {
    -idLibro: Integer
    -titulo: String
    -Autor: String
    -Año: Integer
    -ArrayList: ejemplares[] Ejemplar
}

class Ejemplar {
    -idEjemplar: Integer
    -obra: Libro
    +estaDiponible()
}

class Sistema {
    -datos: BaseDatos
    -catalogoLibros: Catalogo
    +iniciar()
}

class BaseDatos {
    -ArrayList: usuarios[] Usuario
    -ArrayList: prestamos[] Prestamo
}

class Usuario {
    nombre: String
    password: String
}

class Socio {
    -ArrayList: prestamos[] Prestamo
    +puedeRealizarPrestamo()
    +consultarEstado()
    +verCatalogo()
    +solicitarPrestamo()
    +devolverLibro()
}

class Bibliotecario {
    +verCatalogo()
    +aprobarPrestamo()
    +aceptarDevolucion()
    +enviarAReparacion()
}

class Administrador {
    +verCatalogo()
    +darAltaUsuario()
    +darBajaUsuario()
    +modificarDatosUsuario()
    +repararLibro()
    +agregarLibro()
    +eliminarLibro()
    +modificarLibro()
}

class Prestamo {
    -Integer idPrestamo;
    -Socio socio;
    -Ejemplar ejemplar;
    -LocalDate fechaPrestamo;
    -LocalDate fechaDevolucionPrevista;
    -LocalDate fechaDevolucionReal;
    -String estado;
    +public boolean estaVencido()
}

Prestamo "*" -- "1" Socio
Prestamo "*" -- "1" Ejemplar
BaseDatos "1" o-- "*" Prestamo
Biblioteca "1" -> "1" Sistema
Catalogo "1" o- "*" Libro
Libro "1" *-- "*" Ejemplar
Sistema "1" o-- "1" BaseDatos
Sistema "1" o- "1" Catalogo
BaseDatos "1" o-- "*" Usuario
Usuario <|-- Socio
Usuario <|-- Bibliotecario
Usuario <|-- Administrador


@enduml
